--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
     <a href="playcounts.html" target="_blank" id="playCtsLink">See play counts</a>
 	</body>
 	<script>
-    var playcounts = [0];
+    var playCounts = [0];
     for (var i = 1; i <= 47; i++) {
       if (localStorage.getItem("song" + i) != null) {
         playCounts[i] = localStorage.getItem("song" + i);
