--- a/playcounts.html
+++ b/playcounts.html
@@ -12,53 +12,53 @@
 	<body>
     Play Counts
     <ul id="songs">
-      <li>Barracuda: <span>0</span></li>
-      <li>Cascade: <span>0</span></li>
-      <li>Cheat Codes: <span>0</span></li>
-      <li>Checkpoint: <span>0</span></li>
-      <li>Chip Zeal: <span>0</span></li>
-      <li>Chronos: <span>0</span></li>
-      <li>Commando Steve: <span>0</span></li>
-      <li>Cool Friends: <span>0</span></li>
-      <li>Core: <span>0</span></li>
-      <li>Corrupted: <span>0</span></li>
-      <li>Courtesy: <span>0</span></li>
-      <li>Cruise Control: <span>0</span></li>
-      <li>Dance of the Incognizant: <span>0</span></li>
-      <li>Destroid 10 - Funk Hole: <span>0</span></li>
-      <li>Destroid 8 - Annihilate: <span>0</span></li>
-      <li>Final Boss: <span>0</span></li>
-      <li>Focus: <span>0</span></li>
-      <li>FOX: <span>0</span></li>
-      <li>FTW: <span>0</span></li>
-      <li>Houston: <span>0</span></li>
-      <li>HYPE: <span>0</span></li>
-      <li>Into The Zone: <span>0</span></li>
-      <li>Legacy (feat. Zef): <span>0</span></li>
-      <li>Logic Gatekeeper: <span>0</span></li>
-      <li>Long Live The New Fresh: <span>0</span></li>
-      <li>Milky Ways: <span>0</span></li>
-      <li>New Game: <span>0</span></li>
-      <li>On The Run: <span>0</span></li>
-      <li>Once Again: <span>0</span></li>
-      <li>Otis: <span>0</span></li>
-      <li>Paper Dolls: <span>0</span></li>
-      <li>Parallel Processing: <span>0</span></li>
-      <li>Peer Gynt: <span>0</span></li>
-      <li>Rainbow Road: <span>0</span></li>
-      <li>Sevcon: <span>0</span></li>
-      <li>Spectra: <span>0</span></li>
-      <li>Sugar Rush: <span>0</span></li>
-      <li>Tension: <span>0</span></li>
-      <li>Termination Shock: <span>0</span></li>
-      <li>The Art of War: <span>0</span></li>
-      <li>The Lunar Whale (feat. Zef): <span>0</span></li>
-      <li>Till It&apos;s Over: <span>0</span></li>
-      <li>Tokyo Skies: <span>0</span></li>
-      <li>Try This: <span>0</span></li>
-      <li>Unlocked: <span>0</span></li>
-      <li>Vindicate Me: <span>0</span></li>
-      <li>Wicked: <span>0</span></li>
+	    <li><span style="display: inline-block; width: 300px;">Barracuda</span>: <span>0</span></li>
+	    <li><span style="display: inline-block; width: 300px;">Cascade</span>: <span>0</span></li>
+	    <li><span style="display: inline-block; width: 300px;">Cheat Codes</span>: <span>0</span></li>
+	    <li><span style="display: inline-block; width: 300px;">Checkpoint</span>: <span>0</span></li>
+	    <li><span style="display: inline-block; width: 300px;">Chip Zeal</span>: <span>0</span></li>
+	    <li><span style="display: inline-block; width: 300px;">Chronos</span>: <span>0</span></li>
+	    <li><span style="display: inline-block; width: 300px;">Commando Steve</span>: <span>0</span></li>
+	    <li><span style="display: inline-block; width: 300px;">Cool Friends</span>: <span>0</span></li>
+	    <li><span style="display: inline-block; width: 300px;">Core</span>: <span>0</span></li>
+	    <li><span style="display: inline-block; width: 300px;">Corrupted</span>: <span>0</span></li>
+	    <li><span style="display: inline-block; width: 300px;">Courtesy</span>: <span>0</span></li>
+	    <li><span style="display: inline-block; width: 300px;">Cruise Control</span>: <span>0</span></li>
+	    <li><span style="display: inline-block; width: 300px;">Dance of the Incognizant</span>: <span>0</span></li>
+	    <li><span style="display: inline-block; width: 300px;">Destroid 10 - Funk Hole</span>: <span>0</span></li>
+	    <li><span style="display: inline-block; width: 300px;">Destroid 8 - Annihilate</span>: <span>0</span></li>
+	    <li><span style="display: inline-block; width: 300px;">Final Boss</span>: <span>0</span></li>
+	    <li><span style="display: inline-block; width: 300px;">Focus</span>: <span>0</span></li>
+	    <li><span style="display: inline-block; width: 300px;">FOX</span>: <span>0</span></li>
+	    <li><span style="display: inline-block; width: 300px;">FTW</span>: <span>0</span></li>
+	    <li><span style="display: inline-block; width: 300px;">Houston</span>: <span>0</span></li>
+	    <li><span style="display: inline-block; width: 300px;">HYPE</span>: <span>0</span></li>
+	    <li><span style="display: inline-block; width: 300px;">Into The Zone</span>: <span>0</span></li>
+	    <li><span style="display: inline-block; width: 300px;">Legacy (feat. Zef)</span>: <span>0</span></li>
+	    <li><span style="display: inline-block; width: 300px;">Logic Gatekeeper</span>: <span>0</span></li>
+	    <li><span style="display: inline-block; width: 300px;">Long Live The New Fresh</span>: <span>0</span></li>
+	    <li><span style="display: inline-block; width: 300px;">Milky Ways</span>: <span>0</span></li>
+	    <li><span style="display: inline-block; width: 300px;">New Game</span>: <span>0</span></li>
+	    <li><span style="display: inline-block; width: 300px;">On The Run</span>: <span>0</span></li>
+	    <li><span style="display: inline-block; width: 300px;">Once Again</span>: <span>0</span></li>
+	    <li><span style="display: inline-block; width: 300px;">Otis</span>: <span>0</span></li>
+	    <li><span style="display: inline-block; width: 300px;">Paper Dolls</span>: <span>0</span></li>
+	    <li><span style="display: inline-block; width: 300px;">Parallel Processing</span>: <span>0</span></li>
+	    <li><span style="display: inline-block; width: 300px;">Peer Gynt</span>: <span>0</span></li>
+	    <li><span style="display: inline-block; width: 300px;">Rainbow Road</span>: <span>0</span></li>
+	    <li><span style="display: inline-block; width: 300px;">Sevcon</span>: <span>0</span></li>
+	    <li><span style="display: inline-block; width: 300px;">Spectra</span>: <span>0</span></li>
+	    <li><span style="display: inline-block; width: 300px;">Sugar Rush</span>: <span>0</span></li>
+	    <li><span style="display: inline-block; width: 300px;">Tension</span>: <span>0</span></li>
+	    <li><span style="display: inline-block; width: 300px;">Termination Shock</span>: <span>0</span></li>
+	    <li><span style="display: inline-block; width: 300px;">The Art of War</span>: <span>0</span></li>
+	    <li><span style="display: inline-block; width: 300px;">The Lunar Whale (feat. Zef)</span>: <span>0</span></li>
+	    <li><span style="display: inline-block; width: 300px;">Till It&apos;s Over</span>: <span>0</span></li>
+	    <li><span style="display: inline-block; width: 300px;">Tokyo Skies</span>: <span>0</span></li>
+	    <li><span style="display: inline-block; width: 300px;">Try This</span>: <span>0</span></li>
+	    <li><span style="display: inline-block; width: 300px;">Unlocked</span>: <span>0</span></li>
+	    <li><span style="display: inline-block; width: 300px;">Vindicate Me</span>: <span>0</span></li>
+	    <li><span style="display: inline-block; width: 300px;">Wicked</span>: <span>0</span></li>
     </ul>
 	</body>
 	<script>
