--- a/playcounts.html
+++ b/playcounts.html
@@ -12,53 +12,53 @@
 	<body>
     Play Counts
     <ul id="songs">
-	    <li><span style="display: inline-block; width: 300px;">Barracuda</span>: <span>0</span></li>
-	    <li><span style="display: inline-block; width: 300px;">Cascade</span>: <span>0</span></li>
-	    <li><span style="display: inline-block; width: 300px;">Cheat Codes</span>: <span>0</span></li>
-	    <li><span style="display: inline-block; width: 300px;">Checkpoint</span>: <span>0</span></li>
-	    <li><span style="display: inline-block; width: 300px;">Chip Zeal</span>: <span>0</span></li>
-	    <li><span style="display: inline-block; width: 300px;">Chronos</span>: <span>0</span></li>
-	    <li><span style="display: inline-block; width: 300px;">Commando Steve</span>: <span>0</span></li>
-	    <li><span style="display: inline-block; width: 300px;">Cool Friends</span>: <span>0</span></li>
-	    <li><span style="display: inline-block; width: 300px;">Core</span>: <span>0</span></li>
-	    <li><span style="display: inline-block; width: 300px;">Corrupted</span>: <span>0</span></li>
-	    <li><span style="display: inline-block; width: 300px;">Courtesy</span>: <span>0</span></li>
-	    <li><span style="display: inline-block; width: 300px;">Cruise Control</span>: <span>0</span></li>
-	    <li><span style="display: inline-block; width: 300px;">Dance of the Incognizant</span>: <span>0</span></li>
-	    <li><span style="display: inline-block; width: 300px;">Destroid 10 - Funk Hole</span>: <span>0</span></li>
-	    <li><span style="display: inline-block; width: 300px;">Destroid 8 - Annihilate</span>: <span>0</span></li>
-	    <li><span style="display: inline-block; width: 300px;">Final Boss</span>: <span>0</span></li>
-	    <li><span style="display: inline-block; width: 300px;">Focus</span>: <span>0</span></li>
-	    <li><span style="display: inline-block; width: 300px;">FOX</span>: <span>0</span></li>
-	    <li><span style="display: inline-block; width: 300px;">FTW</span>: <span>0</span></li>
-	    <li><span style="display: inline-block; width: 300px;">Houston</span>: <span>0</span></li>
-	    <li><span style="display: inline-block; width: 300px;">HYPE</span>: <span>0</span></li>
-	    <li><span style="display: inline-block; width: 300px;">Into The Zone</span>: <span>0</span></li>
-	    <li><span style="display: inline-block; width: 300px;">Legacy (feat. Zef)</span>: <span>0</span></li>
-	    <li><span style="display: inline-block; width: 300px;">Logic Gatekeeper</span>: <span>0</span></li>
-	    <li><span style="display: inline-block; width: 300px;">Long Live The New Fresh</span>: <span>0</span></li>
-	    <li><span style="display: inline-block; width: 300px;">Milky Ways</span>: <span>0</span></li>
-	    <li><span style="display: inline-block; width: 300px;">New Game</span>: <span>0</span></li>
-	    <li><span style="display: inline-block; width: 300px;">On The Run</span>: <span>0</span></li>
-	    <li><span style="display: inline-block; width: 300px;">Once Again</span>: <span>0</span></li>
-	    <li><span style="display: inline-block; width: 300px;">Otis</span>: <span>0</span></li>
-	    <li><span style="display: inline-block; width: 300px;">Paper Dolls</span>: <span>0</span></li>
-	    <li><span style="display: inline-block; width: 300px;">Parallel Processing</span>: <span>0</span></li>
-	    <li><span style="display: inline-block; width: 300px;">Peer Gynt</span>: <span>0</span></li>
-	    <li><span style="display: inline-block; width: 300px;">Rainbow Road</span>: <span>0</span></li>
-	    <li><span style="display: inline-block; width: 300px;">Sevcon</span>: <span>0</span></li>
-	    <li><span style="display: inline-block; width: 300px;">Spectra</span>: <span>0</span></li>
-	    <li><span style="display: inline-block; width: 300px;">Sugar Rush</span>: <span>0</span></li>
-	    <li><span style="display: inline-block; width: 300px;">Tension</span>: <span>0</span></li>
-	    <li><span style="display: inline-block; width: 300px;">Termination Shock</span>: <span>0</span></li>
-	    <li><span style="display: inline-block; width: 300px;">The Art of War</span>: <span>0</span></li>
-	    <li><span style="display: inline-block; width: 300px;">The Lunar Whale (feat. Zef)</span>: <span>0</span></li>
-	    <li><span style="display: inline-block; width: 300px;">Till It&apos;s Over</span>: <span>0</span></li>
-	    <li><span style="display: inline-block; width: 300px;">Tokyo Skies</span>: <span>0</span></li>
-	    <li><span style="display: inline-block; width: 300px;">Try This</span>: <span>0</span></li>
-	    <li><span style="display: inline-block; width: 300px;">Unlocked</span>: <span>0</span></li>
-	    <li><span style="display: inline-block; width: 300px;">Vindicate Me</span>: <span>0</span></li>
-	    <li><span style="display: inline-block; width: 300px;">Wicked</span>: <span>0</span></li>
+	    <li><div style="display: inline-block; width: 300px;">Barracuda</div>: <span>0</span></li>
+	    <li><div style="display: inline-block; width: 300px;">Cascade</div>: <span>0</span></li>
+	    <li><div style="display: inline-block; width: 300px;">Cheat Codes</div>: <span>0</span></li>
+	    <li><div style="display: inline-block; width: 300px;">Checkpoint</div>: <span>0</span></li>
+	    <li><div style="display: inline-block; width: 300px;">Chip Zeal</div>: <span>0</span></li>
+	    <li><div style="display: inline-block; width: 300px;">Chronos</div>: <span>0</span></li>
+	    <li><div style="display: inline-block; width: 300px;">Commando Steve</div>: <span>0</span></li>
+	    <li><div style="display: inline-block; width: 300px;">Cool Friends</div>: <span>0</span></li>
+	    <li><div style="display: inline-block; width: 300px;">Core</div>: <span>0</span></li>
+	    <li><div style="display: inline-block; width: 300px;">Corrupted</div>: <span>0</span></li>
+	    <li><div style="display: inline-block; width: 300px;">Courtesy</div>: <span>0</span></li>
+	    <li><div style="display: inline-block; width: 300px;">Cruise Control</div>: <span>0</span></li>
+	    <li><div style="display: inline-block; width: 300px;">Dance of the Incognizant</div>: <span>0</span></li>
+	    <li><div style="display: inline-block; width: 300px;">Destroid 10 - Funk Hole</div>: <span>0</span></li>
+	    <li><div style="display: inline-block; width: 300px;">Destroid 8 - Annihilate</div>: <span>0</span></li>
+	    <li><div style="display: inline-block; width: 300px;">Final Boss</div>: <span>0</span></li>
+	    <li><div style="display: inline-block; width: 300px;">Focus</div>: <span>0</span></li>
+	    <li><div style="display: inline-block; width: 300px;">FOX</div>: <span>0</span></li>
+	    <li><div style="display: inline-block; width: 300px;">FTW</div>: <span>0</span></li>
+	    <li><div style="display: inline-block; width: 300px;">Houston</div>: <span>0</span></li>
+	    <li><div style="display: inline-block; width: 300px;">HYPE</div>: <span>0</span></li>
+	    <li><div style="display: inline-block; width: 300px;">Into The Zone</div>: <span>0</span></li>
+	    <li><div style="display: inline-block; width: 300px;">Legacy (feat. Zef)</div>: <span>0</span></li>
+	    <li><div style="display: inline-block; width: 300px;">Logic Gatekeeper</div>: <span>0</span></li>
+	    <li><div style="display: inline-block; width: 300px;">Long Live The New Fresh</div>: <span>0</span></li>
+	    <li><div style="display: inline-block; width: 300px;">Milky Ways</div>: <span>0</span></li>
+	    <li><div style="display: inline-block; width: 300px;">New Game</div>: <span>0</span></li>
+	    <li><div style="display: inline-block; width: 300px;">On The Run</div>: <span>0</span></li>
+	    <li><div style="display: inline-block; width: 300px;">Once Again</div>: <span>0</span></li>
+	    <li><div style="display: inline-block; width: 300px;">Otis</div>: <span>0</span></li>
+	    <li><div style="display: inline-block; width: 300px;">Paper Dolls</div>: <span>0</span></li>
+	    <li><div style="display: inline-block; width: 300px;">Parallel Processing</div>: <span>0</span></li>
+	    <li><div style="display: inline-block; width: 300px;">Peer Gynt</div>: <span>0</span></li>
+	    <li><div style="display: inline-block; width: 300px;">Rainbow Road</div>: <span>0</span></li>
+	    <li><div style="display: inline-block; width: 300px;">Sevcon</div>: <span>0</span></li>
+	    <li><div style="display: inline-block; width: 300px;">Spectra</div>: <span>0</span></li>
+	    <li><div style="display: inline-block; width: 300px;">Sugar Rush</div>: <span>0</span></li>
+	    <li><div style="display: inline-block; width: 300px;">Tension</div>: <span>0</span></li>
+	    <li><div style="display: inline-block; width: 300px;">Termination Shock</div>: <span>0</span></li>
+	    <li><div style="display: inline-block; width: 300px;">The Art of War</div>: <span>0</span></li>
+	    <li><div style="display: inline-block; width: 300px;">The Lunar Whale (feat. Zef)</div>: <span>0</span></li>
+	    <li><div style="display: inline-block; width: 300px;">Till It&apos;s Over</div>: <span>0</span></li>
+	    <li><div style="display: inline-block; width: 300px;">Tokyo Skies</div>: <span>0</span></li>
+	    <li><div style="display: inline-block; width: 300px;">Try This</div>: <span>0</span></li>
+	    <li><div style="display: inline-block; width: 300px;">Unlocked</div>: <span>0</span></li>
+	    <li><div style="display: inline-block; width: 300px;">Vindicate Me</div>: <span>0</span></li>
+	    <li><div style="display: inline-block; width: 300px;">Wicked</div>: <span>0</span></li>
     </ul>
 	</body>
 	<script>
