--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
     <meta property="og:title" content="Epic Music Player - Play amazing electro music!"/>
     <meta property="og:site_name" content="Epic Music Player"/>
     <meta property="og:description" content="47 tracks of awesomeness. Want some amazing electro and chiptunes and whatnot? You've come to the right place."/>
-    <meta property="og:image" content="http://marblelover003.github.io/AwesomeMusic/Epic Music Player.jpg"/>
+    <meta property="og:image" content="http://marblelover003.github.io/AwesomeMusic/Play Counts 2.jpg"/>
   </head>
   <body>
     <select id="song" onchange="change()">
