--- a/playcounts.html
+++ b/playcounts.html
@@ -1,67 +1,67 @@
 <!DOCTYPE html>
 <html>
-	<head>
+  <head>
     <title>Play Counts</title>
     <link rel="icon" href="Play Counts.jpg">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,600,900|Overlock">
-		<style>
+    <style>
       body {font-family: Montserrat;}
       ul li {list-style-type: none;}
-		</style>
-	</head>
-	<body>
+    </style>
+  </head>
+  <body>
     Play Counts
     <ul id="songs">
-	    <li><div style="display: inline-block; width: 300px;">Barracuda</div>: <span>0</span></li>
-	    <li><div style="display: inline-block; width: 300px;">Cascade</div>: <span>0</span></li>
-	    <li><div style="display: inline-block; width: 300px;">Cheat Codes</div>: <span>0</span></li>
-	    <li><div style="display: inline-block; width: 300px;">Checkpoint</div>: <span>0</span></li>
-	    <li><div style="display: inline-block; width: 300px;">Chip Zeal</div>: <span>0</span></li>
-	    <li><div style="display: inline-block; width: 300px;">Chronos</div>: <span>0</span></li>
-	    <li><div style="display: inline-block; width: 300px;">Commando Steve</div>: <span>0</span></li>
-	    <li><div style="display: inline-block; width: 300px;">Cool Friends</div>: <span>0</span></li>
-	    <li><div style="display: inline-block; width: 300px;">Core</div>: <span>0</span></li>
-	    <li><div style="display: inline-block; width: 300px;">Corrupted</div>: <span>0</span></li>
-	    <li><div style="display: inline-block; width: 300px;">Courtesy</div>: <span>0</span></li>
-	    <li><div style="display: inline-block; width: 300px;">Cruise Control</div>: <span>0</span></li>
-	    <li><div style="display: inline-block; width: 300px;">Dance of the Incognizant</div>: <span>0</span></li>
-	    <li><div style="display: inline-block; width: 300px;">Destroid 10 - Funk Hole</div>: <span>0</span></li>
-	    <li><div style="display: inline-block; width: 300px;">Destroid 8 - Annihilate</div>: <span>0</span></li>
-	    <li><div style="display: inline-block; width: 300px;">Final Boss</div>: <span>0</span></li>
-	    <li><div style="display: inline-block; width: 300px;">Focus</div>: <span>0</span></li>
-	    <li><div style="display: inline-block; width: 300px;">FOX</div>: <span>0</span></li>
-	    <li><div style="display: inline-block; width: 300px;">FTW</div>: <span>0</span></li>
-	    <li><div style="display: inline-block; width: 300px;">Houston</div>: <span>0</span></li>
-	    <li><div style="display: inline-block; width: 300px;">HYPE</div>: <span>0</span></li>
-	    <li><div style="display: inline-block; width: 300px;">Into The Zone</div>: <span>0</span></li>
-	    <li><div style="display: inline-block; width: 300px;">Legacy (feat. Zef)</div>: <span>0</span></li>
-	    <li><div style="display: inline-block; width: 300px;">Logic Gatekeeper</div>: <span>0</span></li>
-	    <li><div style="display: inline-block; width: 300px;">Long Live The New Fresh</div>: <span>0</span></li>
-	    <li><div style="display: inline-block; width: 300px;">Milky Ways</div>: <span>0</span></li>
-	    <li><div style="display: inline-block; width: 300px;">New Game</div>: <span>0</span></li>
-	    <li><div style="display: inline-block; width: 300px;">On The Run</div>: <span>0</span></li>
-	    <li><div style="display: inline-block; width: 300px;">Once Again</div>: <span>0</span></li>
-	    <li><div style="display: inline-block; width: 300px;">Otis</div>: <span>0</span></li>
-	    <li><div style="display: inline-block; width: 300px;">Paper Dolls</div>: <span>0</span></li>
-	    <li><div style="display: inline-block; width: 300px;">Parallel Processing</div>: <span>0</span></li>
-	    <li><div style="display: inline-block; width: 300px;">Peer Gynt</div>: <span>0</span></li>
-	    <li><div style="display: inline-block; width: 300px;">Rainbow Road</div>: <span>0</span></li>
-	    <li><div style="display: inline-block; width: 300px;">Sevcon</div>: <span>0</span></li>
-	    <li><div style="display: inline-block; width: 300px;">Spectra</div>: <span>0</span></li>
-	    <li><div style="display: inline-block; width: 300px;">Sugar Rush</div>: <span>0</span></li>
-	    <li><div style="display: inline-block; width: 300px;">Tension</div>: <span>0</span></li>
-	    <li><div style="display: inline-block; width: 300px;">Termination Shock</div>: <span>0</span></li>
-	    <li><div style="display: inline-block; width: 300px;">The Art of War</div>: <span>0</span></li>
-	    <li><div style="display: inline-block; width: 300px;">The Lunar Whale (feat. Zef)</div>: <span>0</span></li>
-	    <li><div style="display: inline-block; width: 300px;">Till It&apos;s Over</div>: <span>0</span></li>
-	    <li><div style="display: inline-block; width: 300px;">Tokyo Skies</div>: <span>0</span></li>
-	    <li><div style="display: inline-block; width: 300px;">Try This</div>: <span>0</span></li>
-	    <li><div style="display: inline-block; width: 300px;">Unlocked</div>: <span>0</span></li>
-	    <li><div style="display: inline-block; width: 300px;">Vindicate Me</div>: <span>0</span></li>
-	    <li><div style="display: inline-block; width: 300px;">Wicked</div>: <span>0</span></li>
+      <li><div style="display: inline-block; width: 300px;">Barracuda</div>: <span>0</span></li>
+      <li><div style="display: inline-block; width: 300px;">Cascade</div>: <span>0</span></li>
+      <li><div style="display: inline-block; width: 300px;">Cheat Codes</div>: <span>0</span></li>
+      <li><div style="display: inline-block; width: 300px;">Checkpoint</div>: <span>0</span></li>
+      <li><div style="display: inline-block; width: 300px;">Chip Zeal</div>: <span>0</span></li>
+      <li><div style="display: inline-block; width: 300px;">Chronos</div>: <span>0</span></li>
+      <li><div style="display: inline-block; width: 300px;">Commando Steve</div>: <span>0</span></li>
+      <li><div style="display: inline-block; width: 300px;">Cool Friends</div>: <span>0</span></li>
+      <li><div style="display: inline-block; width: 300px;">Core</div>: <span>0</span></li>
+      <li><div style="display: inline-block; width: 300px;">Corrupted</div>: <span>0</span></li>
+      <li><div style="display: inline-block; width: 300px;">Courtesy</div>: <span>0</span></li>
+      <li><div style="display: inline-block; width: 300px;">Cruise Control</div>: <span>0</span></li>
+      <li><div style="display: inline-block; width: 300px;">Dance of the Incognizant</div>: <span>0</span></li>
+      <li><div style="display: inline-block; width: 300px;">Destroid 10 - Funk Hole</div>: <span>0</span></li>
+      <li><div style="display: inline-block; width: 300px;">Destroid 8 - Annihilate</div>: <span>0</span></li>
+      <li><div style="display: inline-block; width: 300px;">Final Boss</div>: <span>0</span></li>
+      <li><div style="display: inline-block; width: 300px;">Focus</div>: <span>0</span></li>
+      <li><div style="display: inline-block; width: 300px;">FOX</div>: <span>0</span></li>
+      <li><div style="display: inline-block; width: 300px;">FTW</div>: <span>0</span></li>
+      <li><div style="display: inline-block; width: 300px;">Houston</div>: <span>0</span></li>
+      <li><div style="display: inline-block; width: 300px;">HYPE</div>: <span>0</span></li>
+      <li><div style="display: inline-block; width: 300px;">Into The Zone</div>: <span>0</span></li>
+      <li><div style="display: inline-block; width: 300px;">Legacy (feat. Zef)</div>: <span>0</span></li>
+      <li><div style="display: inline-block; width: 300px;">Logic Gatekeeper</div>: <span>0</span></li>
+      <li><div style="display: inline-block; width: 300px;">Long Live The New Fresh</div>: <span>0</span></li>
+      <li><div style="display: inline-block; width: 300px;">Milky Ways</div>: <span>0</span></li>
+      <li><div style="display: inline-block; width: 300px;">New Game</div>: <span>0</span></li>
+      <li><div style="display: inline-block; width: 300px;">On The Run</div>: <span>0</span></li>
+      <li><div style="display: inline-block; width: 300px;">Once Again</div>: <span>0</span></li>
+      <li><div style="display: inline-block; width: 300px;">Otis</div>: <span>0</span></li>
+      <li><div style="display: inline-block; width: 300px;">Paper Dolls</div>: <span>0</span></li>
+      <li><div style="display: inline-block; width: 300px;">Parallel Processing</div>: <span>0</span></li>
+      <li><div style="display: inline-block; width: 300px;">Peer Gynt</div>: <span>0</span></li>
+      <li><div style="display: inline-block; width: 300px;">Rainbow Road</div>: <span>0</span></li>
+      <li><div style="display: inline-block; width: 300px;">Sevcon</div>: <span>0</span></li>
+      <li><div style="display: inline-block; width: 300px;">Spectra</div>: <span>0</span></li>
+      <li><div style="display: inline-block; width: 300px;">Sugar Rush</div>: <span>0</span></li>
+      <li><div style="display: inline-block; width: 300px;">Tension</div>: <span>0</span></li>
+      <li><div style="display: inline-block; width: 300px;">Termination Shock</div>: <span>0</span></li>
+      <li><div style="display: inline-block; width: 300px;">The Art of War</div>: <span>0</span></li>
+      <li><div style="display: inline-block; width: 300px;">The Lunar Whale (feat. Zef)</div>: <span>0</span></li>
+      <li><div style="display: inline-block; width: 300px;">Till It&apos;s Over</div>: <span>0</span></li>
+      <li><div style="display: inline-block; width: 300px;">Tokyo Skies</div>: <span>0</span></li>
+      <li><div style="display: inline-block; width: 300px;">Try This</div>: <span>0</span></li>
+      <li><div style="display: inline-block; width: 300px;">Unlocked</div>: <span>0</span></li>
+      <li><div style="display: inline-block; width: 300px;">Vindicate Me</div>: <span>0</span></li>
+      <li><div style="display: inline-block; width: 300px;">Wicked</div>: <span>0</span></li>
     </ul>
-	</body>
-	<script>
+  </body>
+  <script>
     var ls = localStorage;
     var playcounts = [
       ls.getItem("song1"),
@@ -112,30 +112,9 @@
       ls.getItem("song46"),
       ls.getItem("song47")
     ];
-    var list, i, switching, b, shouldSwitch;
-    list = document.getElementById("songs");
-    var playCountsSpanElems = list.getElementsByTagName("SPAN");
+    var playCountsSpanElems = document.getElementById("songs").getElementsByTagName("SPAN");
     for (var x = 0; x < 47; x++) {
       playCountsSpanElems[x].innerHTML = playcounts[x];
     }
-    sortList();
-    function sortList() {
-      switching = true;
-      while (switching) {
-        switching = false;
-        b = list.getElementsByTagName("LI");
-        for (i = 0; i < (b.length - 1); i++) {
-          shouldSwitch = false;
-          if (Number(playCountsSpanElems[i].innerHTML) < Number(playCountsSpanElems[i + 1].innerHTML)) {
-            shouldSwitch = true;
-            break;
-          }
-        }
-        if (shouldSwitch) {
-          b[i].parentNode.insertBefore(b[i + 1], b[i]);
-          switching = true;
-        }
-      }
-    }
-	</script>
+  </script>
 </html>
