--- a/playcounts.html
+++ b/playcounts.html
@@ -7,58 +7,60 @@
     <style>
       body {font-family: Montserrat;}
       ul li {list-style-type: none;}
+      .darker {background: #d7d7d7;}
+      div {display: inline-block; width: 225px;}
     </style>
   </head>
   <body>
     Play Counts
     <ul id="songs">
-      <li><div style="display: inline-block; width: 300px;">Barracuda</div>: <span>0</span></li>
-      <li><div style="display: inline-block; width: 300px;">Cascade</div>: <span>0</span></li>
-      <li><div style="display: inline-block; width: 300px;">Cheat Codes</div>: <span>0</span></li>
-      <li><div style="display: inline-block; width: 300px;">Checkpoint</div>: <span>0</span></li>
-      <li><div style="display: inline-block; width: 300px;">Chip Zeal</div>: <span>0</span></li>
-      <li><div style="display: inline-block; width: 300px;">Chronos</div>: <span>0</span></li>
-      <li><div style="display: inline-block; width: 300px;">Commando Steve</div>: <span>0</span></li>
-      <li><div style="display: inline-block; width: 300px;">Cool Friends</div>: <span>0</span></li>
-      <li><div style="display: inline-block; width: 300px;">Core</div>: <span>0</span></li>
-      <li><div style="display: inline-block; width: 300px;">Corrupted</div>: <span>0</span></li>
-      <li><div style="display: inline-block; width: 300px;">Courtesy</div>: <span>0</span></li>
-      <li><div style="display: inline-block; width: 300px;">Cruise Control</div>: <span>0</span></li>
-      <li><div style="display: inline-block; width: 300px;">Dance of the Incognizant</div>: <span>0</span></li>
-      <li><div style="display: inline-block; width: 300px;">Destroid 10 - Funk Hole</div>: <span>0</span></li>
-      <li><div style="display: inline-block; width: 300px;">Destroid 8 - Annihilate</div>: <span>0</span></li>
-      <li><div style="display: inline-block; width: 300px;">Final Boss</div>: <span>0</span></li>
-      <li><div style="display: inline-block; width: 300px;">Focus</div>: <span>0</span></li>
-      <li><div style="display: inline-block; width: 300px;">FOX</div>: <span>0</span></li>
-      <li><div style="display: inline-block; width: 300px;">FTW</div>: <span>0</span></li>
-      <li><div style="display: inline-block; width: 300px;">Houston</div>: <span>0</span></li>
-      <li><div style="display: inline-block; width: 300px;">HYPE</div>: <span>0</span></li>
-      <li><div style="display: inline-block; width: 300px;">Into The Zone</div>: <span>0</span></li>
-      <li><div style="display: inline-block; width: 300px;">Legacy (feat. Zef)</div>: <span>0</span></li>
-      <li><div style="display: inline-block; width: 300px;">Logic Gatekeeper</div>: <span>0</span></li>
-      <li><div style="display: inline-block; width: 300px;">Long Live The New Fresh</div>: <span>0</span></li>
-      <li><div style="display: inline-block; width: 300px;">Milky Ways</div>: <span>0</span></li>
-      <li><div style="display: inline-block; width: 300px;">New Game</div>: <span>0</span></li>
-      <li><div style="display: inline-block; width: 300px;">On The Run</div>: <span>0</span></li>
-      <li><div style="display: inline-block; width: 300px;">Once Again</div>: <span>0</span></li>
-      <li><div style="display: inline-block; width: 300px;">Otis</div>: <span>0</span></li>
-      <li><div style="display: inline-block; width: 300px;">Paper Dolls</div>: <span>0</span></li>
-      <li><div style="display: inline-block; width: 300px;">Parallel Processing</div>: <span>0</span></li>
-      <li><div style="display: inline-block; width: 300px;">Peer Gynt</div>: <span>0</span></li>
-      <li><div style="display: inline-block; width: 300px;">Rainbow Road</div>: <span>0</span></li>
-      <li><div style="display: inline-block; width: 300px;">Sevcon</div>: <span>0</span></li>
-      <li><div style="display: inline-block; width: 300px;">Spectra</div>: <span>0</span></li>
-      <li><div style="display: inline-block; width: 300px;">Sugar Rush</div>: <span>0</span></li>
-      <li><div style="display: inline-block; width: 300px;">Tension</div>: <span>0</span></li>
-      <li><div style="display: inline-block; width: 300px;">Termination Shock</div>: <span>0</span></li>
-      <li><div style="display: inline-block; width: 300px;">The Art of War</div>: <span>0</span></li>
-      <li><div style="display: inline-block; width: 300px;">The Lunar Whale (feat. Zef)</div>: <span>0</span></li>
-      <li><div style="display: inline-block; width: 300px;">Till It&apos;s Over</div>: <span>0</span></li>
-      <li><div style="display: inline-block; width: 300px;">Tokyo Skies</div>: <span>0</span></li>
-      <li><div style="display: inline-block; width: 300px;">Try This</div>: <span>0</span></li>
-      <li><div style="display: inline-block; width: 300px;">Unlocked</div>: <span>0</span></li>
-      <li><div style="display: inline-block; width: 300px;">Vindicate Me</div>: <span>0</span></li>
-      <li><div style="display: inline-block; width: 300px;">Wicked</div>: <span>0</span></li>
+      <li><div>Barracuda</div><span>0</span></li>
+      <li><div class="darker">Cascade</div><span class="darker">0</span></li>
+      <li><div>Cheat Codes</div><span>0</span></li>
+      <li><div class="darker">Checkpoint</div><span class="darker">0</span></li>
+      <li><div>Chip Zeal</div><span>0</span></li>
+      <li><div class="darker">Chronos</div><span class="darker">0</span></li>
+      <li><div>Commando Steve</div><span>0</span></li>
+      <li><div class="darker">Cool Friends</div><span class="darker">0</span></li>
+      <li><div>Core</div><span>0</span></li>
+      <li><div class="darker">Corrupted</div><span class="darker">0</span></li>
+      <li><div>Courtesy</div><span>0</span></li>
+      <li><div class="darker">Cruise Control</div><span class="darker">0</span></li>
+      <li><div>Dance of the Incognizant</div><span>0</span></li>
+      <li><div class="darker">Destroid 10 - Funk Hole</div><span class="darker">0</span></li>
+      <li><div>Destroid 8 - Annihilate</div><span>0</span></li>
+      <li><div class="darker">Final Boss</div><span class="darker">0</span></li>
+      <li><div>Focus</div><span>0</span></li>
+      <li><div class="darker">FOX</div><span class="darker">0</span></li>
+      <li><div>FTW</div><span>0</span></li>
+      <li><div class="darker">Houston</div><span class="darker">0</span></li>
+      <li><div>HYPE</div><span>0</span></li>
+      <li><div class="darker">Into The Zone</div><span class="darker">0</span></li>
+      <li><div>Legacy (feat. Zef)</div><span>0</span></li>
+      <li><div class="darker">Logic Gatekeeper</div><span class="darker">0</span></li>
+      <li><div>Long Live The New Fresh</div><span>0</span></li>
+      <li><div class="darker">Milky Ways</div><span class="darker">0</span></li>
+      <li><div>New Game</div><span>0</span></li>
+      <li><div class="darker">On The Run</div><span class="darker">0</span></li>
+      <li><div>Once Again</div><span>0</span></li>
+      <li><div class="darker">Otis</div><span class="darker">0</span></li>
+      <li><div>Paper Dolls</div><span>0</span></li>
+      <li><div class="darker">Parallel Processing</div><span class="darker">0</span></li>
+      <li><div>Peer Gynt</div><span>0</span></li>
+      <li><div class="darker">Rainbow Road</div><span class="darker">0</span></li>
+      <li><div>Sevcon</div><span>0</span></li>
+      <li><div class="darker">Spectra</div><span class="darker">0</span></li>
+      <li><div>Sugar Rush</div><span>0</span></li>
+      <li><div class="darker">Tension</div><span class="darker">0</span></li>
+      <li><div>Termination Shock</div><span>0</span></li>
+      <li><div class="darker">The Art of War</div><span class="darker">0</span></li>
+      <li><div>The Lunar Whale (feat. Zef)</div><span>0</span></li>
+      <li><div class="darker">Till It&apos;s Over</div><span class="darker">0</span></li>
+      <li><div>Tokyo Skies</div><span>0</span></li>
+      <li><div class="darker">Try This</div><span class="darker">0</span></li>
+      <li><div>Unlocked</div><span>0</span></li>
+      <li><div class="darker">Vindicate Me</div><span class="darker">0</span></li>
+      <li><div>Wicked</div><span>0</span></li>
     </ul>
   </body>
   <script>
